// Copyright Â© 2019 The Things Network Foundation, The Things Industries B.V.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "lorawan-stack/api/cluster.proto";
import "lorawan-stack/api/identifiers.proto";
import "lorawan-stack/api/rights.proto";

package ttn.lorawan.v3;

option go_package = "go.thethings.network/lorawan-stack/pkg/ttnpb";

service ClusterRegistry {
  rpc Create(CreateClusterRequest) returns (Cluster) {
    option (google.api.http) = {
      post: "/users/{collaborator.user_ids.user_id}/clusters"
      body: "*"
      additional_bindings {
        post: "/organizations/{collaborator.organization_ids.organization_id}/clusters"
        body: "*"
      }
    };
  };

  // Get the cluster with the given identifiers, selecting the fields given
  // by the field mask.
  rpc Get(GetClusterRequest) returns (Cluster) {
    option (google.api.http) = {
      get: "/clusters/{cluster_ids.cluster_id}"
    };
  };

  rpc GetIdentifiersForAddress(GetClusterIdentifiersForAddressRequest) returns (ClusterIdentifiers) {
    option (google.api.http) = {
      get: "/cluster-id/address/{address}"
    };
  };

  // List clusters, selecting the fields given by the field mask.
  rpc List(ListClustersRequest) returns (Clusters) {
    option (google.api.http) = {
      get: "/clusters"
      additional_bindings {
        get: "/users/{collaborator.user_ids.user_id}/clusters"
      }
      additional_bindings {
        get: "/organizations/{collaborator.organization_ids.organization_id}/clusters"
      }
    };
  };

  rpc Update(UpdateClusterRequest) returns (Cluster) {
    option (google.api.http) = {
      put: "/clusters/{cluster.ids.cluster_id}"
      body: "*"
    };
  };

  rpc Delete(ClusterIdentifiers) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/clusters/{cluster_id}"
    };
  };
}

service ClusterAccess {
  rpc ListRights(ClusterIdentifiers) returns (Rights) {
    option (google.api.http) = {
      get: "/clusters/{cluster_id}/rights"
    };
  };

  // Get the rights of a collaborator (member) of the cluster.
  // Pseudo-rights in the response (such as the "_ALL" right) are not expanded.
  rpc GetCollaborator(GetClusterCollaboratorRequest) returns (GetCollaboratorResponse) {
    option (google.api.http) = {
      get: "/clusters/{cluster_ids.cluster_id}/collaborator"
      additional_bindings {
        get: "/clusters/{cluster_ids.cluster_id}/collaborator/user/{collaborator.user_ids.user_id}"
      }
      additional_bindings {
        get: "/clusters/{cluster_ids.cluster_id}/collaborator/organization/{collaborator.organization_ids.organization_id}"
      }
    };
  }

  // Set the rights of a collaborator (member) on the cluster.
  // Setting a collaborator without rights, removes them.
  rpc SetCollaborator(SetClusterCollaboratorRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/clusters/{cluster_ids.cluster_id}/collaborators"
      body: "*"
    };
  };

  rpc ListCollaborators(ListClusterCollaboratorsRequest) returns (Collaborators) {
    option (google.api.http) = {
      get: "/clusters/{cluster_ids.cluster_id}/collaborators"
    };
  };
}
